@@ -179,6 +179,11 @@ sub _build_footer {
 			: () );
 }
 
+has auto_configure_requires => (
+	is => 'ro',
+	isa => Bool,
+	default => 1,
+);
 
 my $template = <<'BUILD_PL';
 # This Build.PL for {{ $dist_name }} was generated by {{ $plugin_title }}.
@@ -194,8 +199,9 @@ BUILD_PL
 
 sub register_prereqs {
 	my ($self) = @_;
-
-	$self->zilla->register_prereqs({ phase => 'configure' }, 'Module::Build::Tiny' => $self->version);
+	if ($self->auto_configure_requires) {
+		$self->zilla->register_prereqs({ phase => 'configure' }, 'Module::Build::Tiny' => $self->version);
+	}
 
 	return;
 }
