@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-ModuleBuildTiny
 
 {{$NEXT}}
+          - Add a auto_configure_requires option
 
 0.017     2023-05-08 18:42:37+02:00 Europe/Amsterdam
           - Include extra newline in Build.PL to facilitate other plugins
